--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-# meta convenience (you'll still build service images separately)
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+python-dotenv==1.0.1
+psycopg[binary]==3.2.1
+pandas==2.2.2
+email-validator==2.1.0.post1
