--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,5 +1,19 @@
-streamlit==1.38.0
-pandas==2.2.2
-requests==2.32.3
+# Root requirements (Railway runs: pip install -r requirements.txt)
+
+# --- pandas fix for Python 3.13 ---
+# On Python 3.13+, install a version that ships wheels.
+pandas>=2.2.3 ; python_version>="3.13"
+# On older Python, keep our tested pin.
+pandas==2.2.2 ; python_version<"3.13"
+
+# --- API deps ---
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+python-dotenv==1.0.1
+psycopg[binary]==3.2.10
+email-validator==2.1.0.post1
+
+# --- Dashboard deps ---
+streamlit==1.37.1
 plotly==5.24.1
-python-dateutil==2.9.0.post0
+requests==2.32.3
