--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,11 +1,21 @@
-# Streamlit dashboard deps
-
-# pandas is optional but handy for tables; keep a Py3.13-safe pin so it installs a wheel.
+# Python 3.13-safe pandas
 pandas>=2.2.3 ; python_version>="3.13"
 pandas==2.2.2 ; python_version<"3.13"
 
+# --- Backend deps ---
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+python-dotenv==1.0.1
+psycopg[binary]==3.2.10
+email-validator==2.1.0.post1
+pyjwt==2.9.0
+bcrypt==4.2.0
+pydantic==2.8.2
+httpx==0.27.2
+openai==1.40.6
+python-dateutil==2.9.0.post0
+
+# --- Dashboard deps ---
 streamlit==1.37.1
 plotly==5.24.1
 requests==2.32.3
-python-dotenv==1.0.1
-pyjwt==2.9.0
