--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,3 @@
-# Root requirements (used by Railway when it runs: pip install -r requirements.txt)
-
-# --- pandas fix for Python 3.13 ---
-# On Python 3.13+, install a version that has prebuilt wheels.
-pandas>=2.2.3 ; python_version>="3.13"
-# On older Python, keep the pinned version we tested with.
-pandas==2.2.2 ; python_version<"3.13"
-
-# --- API deps ---
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-python-dotenv==1.0.1
-psycopg[binary]==3.2.1
-email-validator==2.1.0.post1
-
-# --- Dashboard deps ---
-streamlit==1.37.1
-plotly==5.24.1
-requests==2.32.3
+# Delegate to service-specific requirement files
+-r backend/requirements.txt
+-r dashboard/requirements.txt
