--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,18 @@
+# Pandas: use wheels on Python 3.13+, keep tested pin on older images
+pandas>=2.2.3 ; python_version>="3.13"
+pandas==2.2.2 ; python_version<"3.13"
+
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 python-dotenv==1.0.1
+
+# psycopg binary wheel compatible with Python 3.13
 psycopg[binary]==3.2.10
-pandas==2.2.2
-numpy==1.26.4
+
+email-validator==2.1.0.post1
 pyjwt==2.9.0
 bcrypt==4.2.0
 pydantic==2.8.2
 httpx==0.27.2
 openai==1.40.6
 python-dateutil==2.9.0.post0
-email-validator==2.1.0.post1
