--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,21 +1,7 @@
-# Python 3.13-safe pandas
+# Pandas: use wheels on Python 3.13+, keep tested pin on older images
 pandas>=2.2.3 ; python_version>="3.13"
 pandas==2.2.2 ; python_version<"3.13"
 
-# --- Backend deps ---
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-python-dotenv==1.0.1
-psycopg[binary]==3.2.10
-email-validator==2.1.0.post1
-pyjwt==2.9.0
-bcrypt==4.2.0
-pydantic==2.8.2
-httpx==0.27.2
-openai==1.40.6
-python-dateutil==2.9.0.post0
-
-# --- Dashboard deps ---
 streamlit==1.37.1
 plotly==5.24.1
 requests==2.32.3
