--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-# Delegate to service-specific requirement files
--r backend/requirements.txt
--r dashboard/requirements.txt
+# Intentionally empty. Each Railway service installs its own requirements:
+# - API:       backend/requirements.txt
+# - Dashboard: dashboard/requirements.txt
