--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,8 +1,8 @@
-# Pandas: use wheels on Python 3.13+, keep tested pin on older images
-pandas>=2.2.3 ; python_version>="3.13"
-pandas==2.2.2 ; python_version<"3.13"
+# Streamlit dashboard deps only
+# Pandas: wheels exist on Python 3.13+; pin 2.2.2 for older.
+pandas>=2.2.3 ; python_version >= "3.13"
+pandas==2.2.2 ; python_version < "3.13"
 
 streamlit==1.37.1
 plotly==5.24.1
 requests==2.32.3
-
