--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,3 +16,9 @@ pydantic==2.8.2
 httpx==0.27.2
 openai==1.40.6
 python-dateutil==2.9.0.post0
+
+# --- Added for Sprint 1 (ETL + ML) ---
+SQLAlchemy>=2.0          # ORM / DB layer
+joblib>=1.4              # model persistence
+scikit-learn>=1.6        # ML toolkit (Py3.13 compatible)
+numpy>=2.1               # numeric ops
